unfinished changes
# Conflicts:
#	build.gradle
#	src/main/java/com/ricedotwho/rsm/module/impl/dungeon/DungeonBreaker.java
#	src/main/java/com/ricedotwho/rsm/module/impl/dungeon/boss/p3/terminal/TerminalSolver.java
#	src/main/java/com/ricedotwho/rsm/module/impl/movement/Ether.java
#	src/main/java/com/ricedotwho/rsm/module/impl/render/ClickGUI.java

diff --git c/README.md i/README.md
index f7b8823..81e69b8 100644
--- c/README.md
+++ i/README.md
@@ -96,7 +96,7 @@ admin is fat
     - Time Hud
 - **Item Modifier**
     - Allows you to modifier item hover names
-    - Allows you to change leather armour hex colour client side
+    - Allows you to change leather armour hex color client side
 - **OpSec**
     - Name Hider/Changer
     - Server ID Hider/Changer
@@ -120,7 +120,7 @@ admin is fat
 - **Module List**
     - Renders a list of enabled modules
 - **Screen Tint**
-    - Tints the screen a configurable colour
+    - Tints the screen a configurable color
 - **Trail**
     - Renders a trail behind you
 - **Waypoints**
diff --git c/build.gradle i/build.gradle
index d812b27..ab6fbe6 100644
--- c/build.gradle
+++ i/build.gradle
@@ -48,6 +48,13 @@ dependencies {
         include "org.lwjgl:lwjgl-nanovg:$lwjglVersion:natives-$os"
     }

+    implementation "org.lwjgl:lwjgl-yoga:3.4.1"
+    include "org.lwjgl:lwjgl-yoga:3.4.1"
+    ["natives-linux", "natives-windows", "natives-macos", "natives-macos-arm64"].each {natives ->
+        include("org.lwjgl:lwjgl-yoga:3.4.1:$natives")
+        implementation("org.lwjgl:lwjgl-yoga:3.4.1:$natives")
+    }
+
     implementation("net.hypixel:mod-api:${project.hypixel_mod_api_version}")

     annotationProcessor "org.projectlombok:lombok:1.18.46"
diff --git c/src/main/java/com/ricedotwho/rsm/command/arguments/ModuleArgumentType.java i/src/main/java/com/ricedotwho/rsm/command/arguments/ModuleArgumentType.java
index f37ba3c..f18eed6 100644
--- c/src/main/java/com/ricedotwho/rsm/command/arguments/ModuleArgumentType.java
+++ i/src/main/jav